--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ ul {
     height: 100%;
     position: fixed;
     transition: .3s;
+    z-index: 998;
 }
 
 @media screen and (min-width: 768px) {
@@ -53,6 +54,10 @@ ul {
     .flex-bottom:hover {
         background-color: var(--hover-gb-color);
     }
+}
+
+#navbar-mid {
+    z-index: 999;
 }
 
 #navbar-mid li {
@@ -173,7 +178,7 @@ ul {
         margin-bottom: 60px;
         margin-left: 0px;
     }
-    
+
     #navbar span {
         display: none;
     }
